# pixel_character_generator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: settings.py
src/: generator.py  pixelate.py  prompts.py
